# index-tts2-metal

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  build.sh  clean.sh  compare_w2v_layers.py  plan.md  pyproject.toml  start.sh
.github/workflows/: release.yml
cmake/: embed_metal.cmake
docs/: api.md  evolution.md  model.md  native_bundle.md
metal/: kernels.metal
metal_indextts2/: __init__.py  bundle.py  metrics.py
metal_indextts2/tools/: __init__.py  benchmark_native_hot.py  common.py  compare_golden.py  convert_model.py  convert_voice.py  export_tokenizer_vocab.py  export_voice_pt.py  extract_w2v_features.py  generate_bigvgan_golden.py  generate_campplus_golden.py  generate_dit_golden.py  generate_golden.py  generate_gpt_conformer_attn_golden.py  generate_gpt_conformer_block_golden.py  generate_gpt_conformer_conv_golden.py  generate_gpt_conformer_ff_golden.py  generate_gpt_conformer_stack_golden.py  generate_gpt_emovec_golden.py  generate_gpt_frontend.py  generate_gpt_golden.py  generate_gpt_perceiver_golden.py  generate_gpt_subsampling_golden.py  generate_s2mel_golden.py  generate_text_ids.py  generate_w2v_bert_golden.py  profile_baseline.py  synthesize_native_hot.py  synthesize_reference.py
runtime/: allocator.cpp  audio.cpp  audio.hpp  bundle.cpp  getmodel.cpp  getmodel.h  main.cpp  metal_context.mm
runtime/impl/: dit_cfm_bigvgan.cpp  gpt.cpp  server.cpp  server.hpp  text_frontend.cpp  tokenizer.cpp  tokenizer_tests.cpp  tts_synthesis.cpp
runtime/impl/tts_synthesis/: campplus_speaker_embedding.cpp  clone_manifest_validation.cpp  product_and_readiness.cpp  synthesis_pipeline.cpp  voice_clone_and_tests.cpp  w2v_bert_encoder_layers00_02.cpp  w2v_bert_encoder_layers03_05.cpp  w2v_bert_encoder_layers06_09.cpp  w2v_bert_encoder_layers10_13.cpp  w2v_bert_encoder_layers14_15.cpp  w2v_bert_encoder_layers16_17.cpp
runtime/include/mit2/: allocator.hpp  bundle.hpp  metal_context.hpp  text_frontend.hpp
tests/: chain_w2v_encoder.sh  ref_runner.py  test_benchmark_native_hot.py  test_bundle.py  test_convert_voice.py  test_export_tokenizer_vocab.py  test_generate_campplus_golden.py  test_generate_gpt_frontend.py  test_generate_w2v_bert_golden.py  test_metrics.py  test_synthesize_native_hot.py  test_tokenizer_parity.py  test_tts_launcher_binary.py  tok_corpus.expected.txt  tok_corpus.txt
tools/: add_clone_weights.py  clone_voice_ref.py
